test/corpus/comments.txt
================================================================================
Empty comment
================================================================================

/**/

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Whitespace comment
================================================================================

/*   */

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment
================================================================================

/* This is a comment */

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Comment with slashes
================================================================================

/* /// */

--------------------------------------------------------------------------------

(source_file
  (comment))


================================================================================
Comment with asterisks
================================================================================

/*****/

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Nested comment
================================================================================

/* This is /* a /* nested */ comment */*/

--------------------------------------------------------------------------------

(source_file
  (comment))

================================================================================
Unterminated comment
================================================================================

/*

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (operator)
    (operator)))

================================================================================
Comment end-delimiter only
================================================================================

*/

--------------------------------------------------------------------------------

(source_file
  (ERROR
    (operator)
    (operator)))
