test/corpus/lvalues.txt
================================================================================
Variable
================================================================================

a_variable

--------------------------------------------------------------------------------

(source_file
  (identifier))

================================================================================
Array indexing
================================================================================

an_array[12]

--------------------------------------------------------------------------------

(source_file
  (array_value
    array: (identifier)
    index: (integer_literal)))

================================================================================
Record field
================================================================================

a_record.field

--------------------------------------------------------------------------------

(source_file
  (record_value
    record: (identifier)
    field: (identifier)))
