test/corpus/meta-variables.txt
================================================================================
Meta chunks
================================================================================

_chunks(42)

--------------------------------------------------------------------------------

(source_file
  (meta_chunks
    index: (integer_literal)))

================================================================================
Cast
================================================================================

_cast(42, string)

--------------------------------------------------------------------------------

(source_file
  (meta_cast
    expression: (integer_literal)
    type: (type_alias
      (type_identifier))))

================================================================================
Meta expression
================================================================================

_exp(42)

--------------------------------------------------------------------------------

(source_file
  (meta_expression
    index: (integer_literal)))

================================================================================
Meta lvalue
================================================================================

_lvalue(42)

--------------------------------------------------------------------------------

(source_file
  (meta_lvalue
    index: (integer_literal)))

================================================================================
Meta type identifier
================================================================================

var a : _namety(42) := "I'm So Meta Even This Acronym"

--------------------------------------------------------------------------------

(source_file
  (variable_declaration
    name: (identifier)
    type: (meta_type_identifier
      (integer_literal))
    (operator)
    value: (string_literal)))
